<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_detail_movie_cover"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/colorWhite"
                android:src="@drawable/test"
                android:contentDescription="@string/movie_cover_desc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_action_star"
                        android:contentDescription="@string/movie_rate"
                        android:id="@+id/ic_star"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_star"
                        android:textSize="18sp"
                        android:text="@string/default_movie_rate"
                        android:textStyle="bold"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:id="@+id/tv_movie_rate"
                        android:layout_marginBottom="4dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_movie_rate"
                        android:textSize="12sp"
                        android:text="@string/max_movie_rate"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="6dp"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/tv_detail_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorTitle"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/colorDesc"
                    android:text="@string/movie_cover_desc"
                    android:layout_marginBottom="6dp"
                    android:id="@+id/tv_movie_desc"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:text="@string/cta"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnCTA"/>

    <LinearLayout
        android:id="@+id/ll_progress_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent25"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>